add clips of still image films for MIND

--- a/mind.html
+++ b/mind.html
@@ -43,10 +43,10 @@
         <p><i>MIND</i> explores the hidden realms of human labor that form the foundation of the technologies we encounter and engage with daily. It sheds light on the psychologically demanding and often unacknowledged work of social media content moderators. Moreover, it highlights the use of images, unbeknownst to their subjects and creators, as the training data that fuels artificial intelligence models. By doing so, the work prompts viewers to consider the human labor that is frequently overlooked but essential for the creation and maintenance of the technologies we interact with. It asks who these technologies are designed for, inviting viewers to reflect upon the broader societal implications of our increasingly technologically mediated existence.</p>
         <p style="margin-bottom: 0px;"><b>See:</b></p>
         <ul class="indented-list">
-          <li><a href="mind_1" class="styled-link"><i>MIND, 1</i></a></li>
-          <li><a href="mind_2" class="styled-link"><i>MIND, 2</i></a></li>
-          <li><a href="mind_3" class="styled-link"><i>MIND, 3</i></a></li>
-          <li><a href="mind_ipo_letter" class="styled-link"><i>MIND, IPO Letter</i></a></li>
+          <li><a href="mind_1" class="styled-link"><i>MIND 1</i></a></li>
+          <li><a href="mind_2" class="styled-link"><i>MIND 2</i></a></li>
+          <li><a href="mind_3" class="styled-link"><i>MIND 3</i></a></li>
+          <li><a href="mind_ipo_letter" class="styled-link"><i>MIND IPO Letter</i></a></li>
         </ul>
         <br>
         <img src="projects/mind/images/MIND_2023_Installation_Anna_Zhang_1.jpg" alt="MIND" class="xl-image">
