--- a/mind_ipo_letter.html
+++ b/mind_ipo_letter.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MIND, IPO Letter – Anna Zhang</title>
+  <title>MIND IPO Letter – Anna Zhang</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -38,10 +38,10 @@
       </div>
     </div>
     <div class="content-column">
-        <h2>MIND, IPO Letter</h2>
+        <h2>MIND IPO Letter</h2>
         <p>Printer paper (8.5"x11"), 2023</p>
         <br>
-        <p><i>MIND, IPO Letter</i> is part of <a href="mind" class="styled-link"><i>MIND</i></a>.</p>
+        <p><i>MIND IPO Letter</i> is part of <a href="mind" class="styled-link"><i>MIND</i></a>.</p>
         <br>
         <img src="projects/mind/mind_ipo_letter/MIND_IPO_Letter_Anna_Zhang.jpg" alt="MIND" class="m-image">
         <button id="toggle-text-button"><h2 id="toggle-text-label" style="font-size: 1em;">+ IPO Letter Text</h2></button>
