--- a/mind_1.html
+++ b/mind_1.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MIND, 1 – Anna Zhang</title>
+  <title>MIND 1 – Anna Zhang</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 </head>
@@ -35,12 +35,15 @@
       </div>
     </div>
     <div class="content-column">
-        <h2>MIND, 1</h2>
+        <h2>MIND 1</h2>
         <p>Single-channel video, 07:22 min, 2023</p>
         <br>
         <p><b>Content warning:</b> While this piece is science fiction, it contains material about a school shooting. Viewer discretion is advised. </p>
-        <p><i>MIND, 1</i> follows a single mother employed as a memory editor at MIND, a startup dedicated to making the world happier. As she assumes the responsibility of editing the memory of a school shooting survivor, both the weight of the memory itself and her own personal traumas begin to consume her, blurring the boundaries between reality and fiction.</p>
-        <p><i>MIND, 1</i> is the first part of the <a href="mind" class="styled-link"><i>MIND</i></a> still image film trilogy.</p>
+        <p><i>MIND 1</i> follows a single mother employed as a memory editor at MIND, a startup dedicated to making the world happier. As she assumes the responsibility of editing the memory of a school shooting survivor, both the weight of the memory itself and her own personal traumas begin to consume her, blurring the boundaries between reality and fiction.</p>
+        <p><i>MIND 1</i> is the first part of the <a href="mind" class="styled-link"><i>MIND</i></a> still image film trilogy.</p>
+        <br>
+        <iframe class="mind-video-embed" src="https://www.youtube.com/embed/cHDdbdJ32mY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <p>Clip from <i>MIND 1</i>, 2023</p>
         <br>
         <img src="projects/mind/mind_1/MIND_1_Still_Anna_Zhang_5.jpg" alt="MIND" class="m-image">
         <img src="projects/mind/mind_1/MIND_1_Still_Anna_Zhang_4.jpg" alt="MIND" class="m-image">
