--- a/mind_2.html
+++ b/mind_2.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MIND, 2 – Anna Zhang</title>
+  <title>MIND 2 – Anna Zhang</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 </head>
@@ -35,12 +35,15 @@
       </div>
     </div>
     <div class="content-column">
-        <h2>MIND, 2</h2>
+        <h2>MIND 2</h2>
         <p>Single-channel video, 09:33 min, 2023</p>
         <br>
         <p><b>Content warning:</b> While this piece is science fiction, it contains depictions of violence. Viewer discretion is advised.</p>
-        <p><i>MIND, 2</i> follows a memory editor at MIND, an ambitious startup committed to making the world happier. Drawn to the company by its inspiring mission statement, she aspires to ascend the ranks and make a meaningful impact. However, when assigned the task of editing a memory involving a bar fight, she faces a moral dilemma. The customer desires the removal of moments where they are subjected to violence but wants to retain the instances where they themselves engage in violent behavior. As she navigates the ethical implications of her work, she confronts the harsh reality that fulfilling the company's mission is far more complex than it initially appeared.</p>
-        <p><i>MIND, 2</i> is the second part of the <a href="mind" class="styled-link"><i>MIND</i></a> still image film trilogy.</p>
+        <p><i>MIND 2</i> follows a memory editor at MIND, an ambitious startup committed to making the world happier. Drawn to the company by its inspiring mission statement, she aspires to ascend the ranks and make a meaningful impact. However, when assigned the task of editing a memory involving a bar fight, she faces a moral dilemma. The customer desires the removal of moments where they are subjected to violence but wants to retain the instances where they themselves engage in violent behavior. As she navigates the ethical implications of her work, she confronts the harsh reality that fulfilling the company's mission is far more complex than it initially appeared.</p>
+        <p><i>MIND 2</i> is the second part of the <a href="mind" class="styled-link"><i>MIND</i></a> still image film trilogy.</p>
+        <br>
+        <iframe class="mind-video-embed" src="https://www.youtube.com/embed/kWGFQpKJZ_Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <p>Clip from <i>MIND 2</i>, 2023</p>
         <br>
         <img src="projects/mind/mind_2/MIND_2_Still_Anna_Zhang_1.jpg" alt="MIND" class="m-image">
         <img src="projects/mind/mind_2/MIND_2_Still_Anna_Zhang_2.jpg" alt="MIND" class="m-image">
