make MIND IPO Letter image size larger

--- a/mind_ipo_letter.html
+++ b/mind_ipo_letter.html
@@ -43,7 +43,8 @@
         <br>
         <p><i>MIND IPO Letter</i> is part of <a href="mind" class="styled-link"><i>MIND</i></a>.</p>
         <br>
-        <img src="projects/mind/mind_ipo_letter/MIND_IPO_Letter_Anna_Zhang.jpg" alt="MIND" class="m-image">
+        <img src="projects/mind/mind_ipo_letter/MIND_IPO_Letter_Anna_Zhang.jpg" alt="MIND" class="xl-image">
+        <br>
         <button id="toggle-text-button"><h2 id="toggle-text-label" style="font-size: 1em;">+ IPO Letter Text</h2></button>
         <div id="ipo-letter-text" style="display: none;">
             <p>Dear Prospective Investors,</p>
