make images links on homepage

--- a/index.html
+++ b/index.html
@@ -37,24 +37,32 @@
     <div class="featured-column">
         <!-- Featured Projects -->
         <div class="featured-proj col-1">
+          <a href="mind">
             <img src="projects/mind/images/MIND_2023_Installation_Anna_Zhang_1.jpg" alt="MIND installation">
-            <h2><a href="mind">MIND</a></h2>
-            <p>2023</p>
+            <h2>MIND</h2>
+          </a>
+          <p>2023</p>
         </div> 
         <div class="featured-proj col-3">
+          <a href="refract">
             <img src="projects/refract/Refract_1_Anna_Zhang.jpg" alt="Refract">
-            <h2><a href="refract">Refract</a></h2>
-            <p>2021</p>
+            <h2>Refract</h2>
+          </a>
+          <p>2021</p>
         </div>
         <div class="featured-proj col-2">
+          <a href="sincerely">
             <img src="projects/sincerely/Sincerely_Anna_Zhang.jpg" alt="Sincerely,">
-            <h2><a href="sincerely">Sincerely,</a></h2>
-            <p>2021</p>
+            <h2>Sincerely,</h2>
+          </a>
+          <p>2021</p>
         </div>
         <div class="featured-proj col-3">
+          <a href="brightlove">
             <img src="projects/brightlove/Brightlove_Anna_Zhang.jpeg" alt="Brightlove">
-            <h2><a href="brightlove">Brightlove</a></h2>
-            <p>2019</p>
+            <h2>Brightlove</h2>
+          </a>
+          <p>2019</p>
         </div>
     </div>
   </div>
