add Brightlove overview

--- a/brightlove.html
+++ b/brightlove.html
@@ -37,10 +37,31 @@
     <div class="content-column">
         <h2>Brightlove</h2>
         <p>2019</p>
-        <p>(Info coming soon...)</p>
+        <p>Brightlove is a 2D platforming runner that encourages players to be kind and to take action, rather than be mere bystanders. A refreshing contrast to the violence that often permeates mobile games, Brightlove encourages positive actions and rewards kindness. Featured on <i>Forbes</i>, <i>Google Play</i>, and <i>Buzzfeed</i>.</p>
         <br>
         <img src="projects/brightlove/Brightlove_Anna_Zhang.jpeg" alt="Brightlove" class="xl-image">
-    </div>
+        <img src="projects/brightlove/Brightlove_NMAH_Exhibition_View.jpg" alt="Brightlove on a tablet in the National Museum of American History" class="xl-image">
+        <p class="img-caption"><i>Brightlove</i>, exhibition view, <i>Girlhood (It's Complicated)</i>, National Museum of American History, Washington, D.C., 2021-2023</p>
+        <h3>Credits</h3>
+        <ul class="indented-list">
+          <li>Original Concept & Creative Direction: Anna Zhang</li>
+          <li>Executive Producer: Laila Shabir</li>
+          <li>Studio Director: John Meister</li>
+          <li>Programming: Shea Rembold</li>
+          <li>Level Design: Lacey Lansaw</li>
+          <li>QA: Amanda Hudgins</li>
+          <li>Intern: Dustin Vanderpool</li>
+          <li>Producer: Kristani Alcantara</li>
+          <li>Art: Yue Li, Alex Clauss, Katie Longua</li>
+          <li>Writing: Katie Longua</li>
+          <li>Audio & Sound Design: Team Audio</li>
+          <li>Music: Chris Rickwood</li>
+          <li>SFX: Zachary Woomer</li>
+        </ul>
+        <br>
+        <p><i>Grand Prize Winner in Google Play's Change the Game Design Challenge</i></p>
+        <p><i>Game brought to life in collaboration with Google Play and Girls Make Games</i></p>
+      </div>
   </div>
   <script src="main.js"></script>
 </body>
