--- a/mind.html
+++ b/mind.html
@@ -50,15 +50,15 @@
         </ul>
         <br>
         <img src="projects/mind/images/MIND_2023_Installation_Anna_Zhang_1.jpg" alt="MIND" class="xl-image">
-        <p><i>MIND</i> (installation view, Green Hall Gallery, New Haven), 2023</p>
+        <p class="img-caption"><i>MIND</i> (installation view, Green Hall Gallery, New Haven), 2023</p>
         <img src="projects/mind/images/MIND_2023_Installation_Anna_Zhang_4.jpg" alt="MIND" class="xl-image">
-        <p><i>MIND</i> (installation view, Green Hall Gallery, New Haven), 2023</p>
+        <p class="img-caption"><i>MIND</i> (installation view, Green Hall Gallery, New Haven), 2023</p>
         <img src="projects/mind/images/MIND_2023_Installation_Anna_Zhang_2.jpg" alt="MIND" class="xl-image">
-        <p><i>MIND</i> (installation view, detail shot, Green Hall Gallery, New Haven), 2023</p>
+        <p class="img-caption"><i>MIND</i> (installation view, detail shot, Green Hall Gallery, New Haven), 2023</p>
         <img src="projects/mind/images/MIND_2023_Installation_Anna_Zhang_5.jpg" alt="MIND" class="xl-image">
-        <p><i>MIND</i> (installation view, detail shot, Green Hall Gallery, New Haven), 2023</p>
+        <p class="img-caption"><i>MIND</i> (installation view, detail shot, Green Hall Gallery, New Haven), 2023</p>
         <img src="projects/mind/images/MIND_2023_Installation_Anna_Zhang_6.jpg" alt="MIND" class="xl-image">
-        <p><i>MIND</i> (installation view, detail shot, Green Hall Gallery, New Haven), 2023</p>
+        <p class="img-caption"><i>MIND</i> (installation view, detail shot, Green Hall Gallery, New Haven), 2023</p>
     </div>
   </div>
   <script src="main.js"></script>
