add Refract info text

--- a/refract.html
+++ b/refract.html
@@ -37,7 +37,7 @@
     <div class="content-column">
         <h2>Refract</h2>
         <p>2021</p>
-        <p>(Info coming soon...)</p>
+        <p>To refract is to change directions when passing from one medium to another. In an increasingly digital world, the body is continuously realized, reconfigured, and/or redacted. Employing algorithmic manipulations and alternative photo-making processes, <i>Refract</i> examines how we produce and consume in our everyday lives.</p>
         <br>
         <img src="projects/refract/Refract_1_Anna_Zhang.jpg" alt="Refract" class="xl-image">
         <img src="projects/refract/Refract_2_Anna_Zhang.jpg" alt="Refract" class="xl-image">
