add Sincerely, project overview

--- a/sincerely.html
+++ b/sincerely.html
@@ -37,10 +37,15 @@
     <div class="content-column">
         <h2>Sincerely,</h2>
         <p>2021</p>
-        <p>(Info coming soon...)</p>
+        <p><i>Sincerely,</i> is an ongoing series of AI-generated scenes using materials from deceptive digital transmissions as input, including lottery prize junk emails, lines from terms and conditions agreements, and spammy business proposals. Created using GANs and diffusion models, these images, too, are deceptive - they give form to what does not in fact exist.</p>
         <br>
         <img class="m-image" src="projects/sincerely/Sincerely_Anna_Zhang.jpg" alt="Sincerely,">
-    </div>
+        <p class="img-caption"><i>We are waiting for you.</i><br>
+          Timesteps: 221, 270, 290, 325, 326, 331, 336, 341, 346, 364, 378, 383, 389, 402, 408, 414, 471, 489, 493, 525</p>
+        <img class="m-image" src="projects/sincerely/Sincerely_Anna_Zhang_2.jpg" alt="Sincerely,">
+        <p class="img-caption"><i>Trust me. I keep my word.</i><br>
+          Timesteps: 273, 298, 322, 325, 398, 414, 543, 609, 1000</p>
+      </div>
   </div>
   <script src="main.js"></script>
 </body>
