update Instagram link

--- a/404.html
+++ b/404.html
@@ -26,7 +26,7 @@
                 <li><a href="info">Info</a></li>
             </ul>
             <div class="social-links">
-                <a href="https://www.instagram.com/anna.zhang.studio/" target="_blank" rel="noopener noreferrer"><i class="bi bi-instagram"></i></a>
+                <a href="https://www.instagram.com/annazhang.studio/" target="_blank" rel="noopener noreferrer"><i class="bi bi-instagram"></i></a>
                 <a href="https://twitter.com/byannazhang" target="_blank" rel="noopener noreferrer"><i class="bi bi-twitter"></i></a>
                 <a href="https://github.com/anna-zhang" target="_blank" rel="noopener noreferrer"><i class="bi bi-github"></i></a>
                 <a href="https://www.linkedin.com/in/zhang-anna/" target="_blank" rel="noopener noreferrer"><i class="bi bi-linkedin"></i></a>
