update photos page with people and places links

--- a/photos.html
+++ b/photos.html
@@ -35,7 +35,18 @@
         </div>
     </div>
     <div class="featured-column">
-        <p>This page is under construction... here are some other <a href="index" class="styled-link">projects</a> in the meantime :)</p>
+        <div class="featured-proj col-1">
+            <a href="people">
+                <img src="projects/photos/people/People_Anna_Zhang_2.jpg" alt="">
+                <h2>PEOPLE</h2>
+            </a>
+        </div> 
+        <div class="featured-proj col-3">
+            <a href="places">
+                <img src="projects/photos/places/Places_Anna_Zhang_18.jpg" alt="">
+                <h2>PLACES</h2>
+            </a>
+        </div>
     </div>
   </div>
   <script src="main.js"></script>
