add Please Try Again to homepage featured

--- a/index.html
+++ b/index.html
@@ -44,6 +44,13 @@
           <p>2023</p>
         </div> 
         <div class="featured-proj col-3">
+          <a href="please_try_again">
+            <img src="projects/please-try-again/Please_Try_Again_Installation_32_Edgewood_Gallery_1.jpg" alt="Please Try Again">
+            <h2>Please Try Again</h2>
+          </a>
+          <p>2023</p>
+        </div>
+        <div class="featured-proj col-3">
           <a href="refract">
             <img src="projects/refract/Refract_1_Anna_Zhang.jpg" alt="Refract">
             <h2>Refract</h2>
