add additional installation view image to Please Try Again

--- a/please_try_again.html
+++ b/please_try_again.html
@@ -46,9 +46,11 @@
         <br>
         <img src="projects/please-try-again/Please_Try_Again_Landing.gif" alt="Please Try Again" class="xl-image">
         <br>
-        <img src="projects/please-try-again/Please_Try_Again_Installation_32_Edgewood_Gallery_1.jpg" alt="Please Try Again" class="xl-image">
+        <img src="projects/please-try-again/Please_Try_Again_Installation_32_Edgewood_Gallery_3.jpg" alt="Please Try Again" class="xl-image">
         <p class="img-caption"><i>Please Try Again</i> (installation view, <i>This Design is Very Human</i>, 32 Edgewood Gallery, New Haven), 2023</p>
         <img src="projects/please-try-again/Please_Try_Again_Installation_32_Edgewood_Gallery_2.jpg" alt="Please Try Again" class="xl-image">
+        <p class="img-caption"><i>Please Try Again</i> (installation view, <i>This Design is Very Human</i>, 32 Edgewood Gallery, New Haven), 2023</p>
+        <img src="projects/please-try-again/Please_Try_Again_Installation_32_Edgewood_Gallery_1.jpg" alt="Please Try Again" class="xl-image">
         <p class="img-caption"><i>Please Try Again</i> (installation view, <i>This Design is Very Human</i>, 32 Edgewood Gallery, New Haven), 2023</p>
         <iframe class="full-width-video-embed" src="https://www.youtube.com/embed/YLNsN2I3cQ8?si=L8pVcAj4R07QAx6L" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         <p><i>Please Try Again</i> (installation video, <i>This Design is Very Human</i>, 32 Edgewood Gallery, New Haven), 2023</p>
