add MIND to links

--- a/links.html
+++ b/links.html
@@ -37,6 +37,9 @@
     <div class="content-column">
         <h2>Links</h2>
         <br>
+        <h3><a href="mind">MIND</a></h3>
+        <br>
+        <h3><a href="https://zhanganna.substack.com/p/mbti-mania" target="_blank" rel="noopener noreferrer">MBTI Mania</a></h3>
         <div class="substack-post-embed"><p lang="en">MBTI Mania by Anna Zhang</p><p>How Four Letters Are Taking Over Chinese Social Media</p><a data-post-link href="https://zhanganna.substack.com/p/mbti-mania" target="_blank" rel="noopener noreferrer">Read on Substack</a></div><script async src="https://substack.com/embedjs/embed.js" charset="utf-8"></script>
     </div>
   <script src="main.js"></script>
