add social links

--- a/links.html
+++ b/links.html
@@ -36,6 +36,16 @@
     </div>
     <div class="content-column">
         <h2>Links</h2>
+        <div class="social-links">
+            <br>
+            <a href="https://www.instagram.com/byannazhang/" target="_blank" rel="noopener noreferrer"><i class="bi bi-instagram"></i>@byannazhang</a>
+            <br>
+            <a href="https://www.instagram.com/annazhang.studio/" target="_blank" rel="noopener noreferrer"><i class="bi bi-instagram"></i>@annazhang.studio</a>
+            <br>
+            <a href="https://www.tiktok.com/@creative.technologist" target="_blank" rel="noopener noreferrer"><i class="bi bi-tiktok"></i>@creative.technologist</a>
+            <br>
+            <a href="mailto:annazhang.studio@gmail.com" target="_blank" rel="noopener noreferrer"><i class="bi bi-envelope"></i>send me a note</a>
+        </div>
         <br>
         <h3><a href="mind">MIND</a></h3>
         <br>
