--- a/links.html
+++ b/links.html
@@ -47,6 +47,10 @@
             <a href="mailto:annazhang.studio@gmail.com" target="_blank" rel="noopener noreferrer"><i class="bi bi-envelope"></i>send me a note</a>
         </div>
         <br>
+        <h3><a href="https://zhanganna.substack.com/p/introducing-pxlcam" target="_blank" rel="noopener noreferrer">PXLCAM</a></h3>
+        <div class="substack-post-embed"><p lang="en">Introducing PXLCAM by Anna Zhang</p><p>I'm building a camera app that captures low-res images to reduce digital waste–and includes a countdown to act on climate change.</p><a data-post-link href="https://zhanganna.substack.com/p/introducing-pxlcam" target="_blank" rel="noopener noreferrer">Read on Substack</a></div><script async src="https://substack.com/embedjs/embed.js" charset="utf-8"></script>
+
+        <br>
         <h3><a href="mind">MIND</a></h3>
         <br>
         <h3><a href="https://zhanganna.substack.com/p/mbti-mania" target="_blank" rel="noopener noreferrer">MBTI Mania</a></h3>
