update IG link on links page

--- a/links.html
+++ b/links.html
@@ -38,7 +38,7 @@
         <h2>Links</h2>
         <div class="social-links">
             <br>
-            <a href="https://www.instagram.com/byannazhang/" target="_blank" rel="noopener noreferrer"><i class="bi bi-instagram"></i>@byannazhang</a>
+            <a href="https://www.instagram.com/anna.zhang/" target="_blank" rel="noopener noreferrer"><i class="bi bi-instagram"></i>@anna.zhang</a>
             <br>
             <a href="https://www.instagram.com/annazhang.studio/" target="_blank" rel="noopener noreferrer"><i class="bi bi-instagram"></i>@annazhang.studio</a>
             <br>
